# ZKSpendingDuneQueryRepo

./: .env  pyproject.toml  queries.yml
queries/: monthly___3270143.sql  zkp_verify_spending___3128234.sql
